Fixing position of mobile navbar, and turning off x scrrol on mobile.

--- a/frontend/acustic_ig/src/index.css
+++ b/frontend/acustic_ig/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   background-color: #f5f5f5;
+  overflow-x: hidden;
 }
